# cookiecutter-pypackage

./: .gitignore  .travis.yml  Makefile  README.rst  cookiecutter.json
ci/travis/: deploy.sh
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/ci/travis/: deploy.sh  test.sh
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/src/: lib.rs  main.rs
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
