[package]
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.rst"
edition = "2018"

# [package.metadata.maturin.scripts]

{%- set license_classifiers = {
    'MIT License': 'License :: OSI Approved :: MIT License',
    'BSD License': 'License :: OSI Approved :: BSD License',
    'ISC License': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[package.metadata.maturin]
requires-dist = []
requires-python = ">=3.6"
classifier = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]

[dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3", features = ["extension-module"] }

[lib]
name = "{{ cookiecutter.project_slug }}"
crate-type = ["cdylib"]